# entropy-computing-benchmark-suite

./: .gitignore  README.md  Usage.md  findings.md  pyproject.toml
boson14/: .gitignore  README.md  USAGE.md  full-benchmark.py  generate.py  manual.tex  pyproject.toml  run_R_sweep.py  run_boson14.py  scaled-motzkin-straus.md  test_dirac.py
boson14/boson14_bench/: __init__.py  core.py  io.py  planted_clique.py  problems.py
boson14/hard-instances-benchmarks/: README.md  manual.tex  pipeline.py  utils.py
boson14/hard-instances-benchmarks/_internal/: __init__.py  bruteforce.py  classical_solvers.py  dirac_cloud.py  generators.py  problems.py
boson14/inputs/: C125.9.csv
boson14/report/: report.tex
boson14/scripts/: _common.py  boson14_repair.py  extract_results.py  plot_boson14_repair.py  plot_dirac_overlay.py  plot_graphs.py  plot_histograms.py  plot_summary.py  run_dirac.py
docs/: bomze_regularization.md
problems/dimacs/: erdos_renyi_100_p05.clq  erdos_renyi_100_p09.clq  erdos_renyi_150_p09.clq  erdos_renyi_50_p09.clq  erdos_renyi_75_p05.clq
results/extraction_analysis/: C125.9_cloud_bomze_s2_analysis.json  C125.9_cloud_bomze_s3_analysis.json  C125.9_cloud_bomze_s4_analysis.json  summary.csv  (+21 more)
scripts/: analyze_extractions.py  collect_raw_vectors.py  generate_graphs.py  generate_planted.py  run_benchmark.py  run_bomze_dirac.py  run_comparison_sqlite.py  test_bomze_spurious.py  test_planted_hardness.py
tests/: test_bomze.py  test_boson14.py  test_clique_extraction.py  test_planted_clique.py  test_problems.py  test_run_bomze_dirac.py  test_solvers.py
(+40 files in other folders)
