[project]
name = "boson14-bench"
version = "0.1.0"
description = "Self-contained Boson14 hardware benchmark suite: scaled Motzkin-Strauss formulation for Dirac-3"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "matplotlib",
    "python-dotenv",
    "eqc-models",
    "qci-client>=4.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boson14_bench"]
